--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -1,7 +1,11 @@
 {
-  "store.home": { 
+  "store.home": {
     "blocks": [
-      "flex-layout.row#home-section"
+      "flex-layout.row#home__block-rich-text",
+      "flex-layout.row#home__block-image",
+      "flex-layout.row#home__block-link",
+      "slider-layout#home__block-slider",
+      "list-context.image-list#home__block-list-context-slider"
     ]
   }
 }
