--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,7 @@
     "vtex.search-result": "3.x",
     "vtex.login": "2.x",
     "vtex.my-account": "1.x",
+    "vtex.modal-layout": "0.x",
     "vtex.flex-layout": "0.x",
     "vtex.rich-text": "0.x",
     "vtex.store-drawer": "0.x",
