--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -5,7 +5,10 @@
       "flex-layout.row#home__block-image",
       "flex-layout.row#home__block-link",
       "slider-layout#home__block-slider",
-      "list-context.image-list#home__block-list-context-slider"
+      "list-context.image-list#home__block-list-context-slider",
+      "flex-layout.row#home__block-flex-layout",
+      "flex-layout.row#home__wrapper-responsive-layout",
+      "flex-layout.row#home__block-modals"
     ]
   }
 }
